# emma

./: Bayesian Regret statistics.uxf  Condorcet data.uxf  README.md  coding guidelines.md  design notes.md  method results collection.uxf  method results.uxf  scenario data.uxf  to-do.md
source/: BasicData.h  CMakeLists.txt  Candidate.cpp  Candidate.h  CandidateUtilities.cpp  CandidateUtilities.h  CondorcetCandidate.cpp  CondorcetCandidate.h  Copyright.cpp  Copyright.h  Data.cpp  Data.h  EMMA.cpp  EMMA.h  Election.cpp  Election.h  GivenData.cpp  GivenData.h  IndividualElectionStatistics.cpp  IndividualElectionStatistics.h  Introduction.cpp  Introduction.h  License.cpp  License.h  Logging.h  Makefile  OverviewStatistics.cpp  OverviewStatistics.h  Printing.cpp  Printing.h  Pseudorandom.cpp  Pseudorandom.h  RawParsedOptions.h  RequestedInformation.cpp  RequestedInformation.h  Results.cpp  Results.h  RunMode.cpp  RunMode.h  RunState.cpp  (+13 more)
